# tilegym

./: format.sh  pyproject.toml  setup.py
.github/: infra_overview.md  pull_request_template.md
.github/infra_tests/: test_check_image_exists.py  test_cleanup_stale_images.py  test_format_benchmark_summary.py  test_parse_pr_config.py  test_utils.py
.github/scripts/: check_image_exists.py  cleanup_stale_images.py  format_benchmark_summary.py  parse_pr_config.py  utils.py
.github/workflows/: tilegym-ci-infra-tests.yml  tilegym-ci.yml  tilegym-ghcr-cleanup.yml
.project/: spec.yaml
modeling/transformers/: Dockerfile  infer.py
src/tilegym/: __init__.py  logger.py
src/tilegym/backend/: __init__.py  dispatcher.py  selector.py
src/tilegym/backend/cutile/: __init__.py  autotuner.py
src/tilegym/ops/: __init__.py  attn_interface.py  fused_swiglu.py  moe_interface.py  ops.py
src/tilegym/transformers/: monkey_patch.py
tests/: common.py  config.py  conftest.py
tests/benchmark/: README.md  bench_fused_attention.py  bench_matrix_multiplication.py  bench_mhc.py  bench_mix_triton_cutile.py  bench_mla.py  bench_mla_decoding.py  bench_persistent_matmul.py  bench_rmsnorm.py  bench_rope.py  bench_silu_and_mul.py  bench_softmax.py  bench_swiglu.py  run_all.sh
tests/ops/: test_attention.py  test_flash_decode.py  test_group_gemm.py  test_matmul.py  test_mla.py  test_mla_decoding.py  test_mla_decoding_split_kv.py  test_moe.py  test_rms_norm.py  test_rmsnorm_backward.py  test_rope.py  test_silu_and_mul.py  test_softmax.py  test_splitk_reduce.py  test_swiglu.py
(+19 files in other folders)
