# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["I"]  # I = isort (import sorting only)
ignore = []

[tool.ruff.lint.isort]
force-single-line = true

[tool.pylint]
disable = [
   "missing-function-docstring",
   "missing-class-docstring",
   "missing-module-docstring",
   "broad-except",
   "invalid-name",
   "logging-fstring-interpolation",
   ]
generated-members = "numpy.*, torch.*"

[tool.pytest.ini_options]
junit_family = "xunit1"
